--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^105.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "query-string": "^9.1.1",
     "tesseract.js": "^6.0.0"
   }
 }
